[gd_scene load_steps=15 format=2]

[ext_resource path="res://resources/textures/sprite/screens/battle_screen_base.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Battle/PlayerSoul.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Battle/CombatQueue.gd" type="Script" id=3]
[ext_resource path="res://Scenes/UI/DefaultFocusItem.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Battle/Backgrounds/AutoScrollBackground.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/themes/basic_theme.tres" type="Theme" id=6]
[ext_resource path="res://resources/textures/sprite/health_bar.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Battle/PlayerUI.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Battle/PlayerTurnProxy.gd" type="Script" id=10]
[ext_resource path="res://resources/textures/sprite/health_bar_fill.png" type="Texture" id=11]
[ext_resource path="res://resources/textures/sprite/health_bar_over.png" type="Texture" id=12]
[ext_resource path="res://Scenes/Battle/PlayerHealthMonitor.gd" type="Script" id=13]

[sub_resource type="LineShape2D" id=1]

[sub_resource type="Environment" id=2]
background_mode = 4
background_color = Color( 0.741176, 0.160784, 0.160784, 1 )
ambient_light_color = Color( 0.376471, 0.239216, 0.239216, 1 )
adjustment_enabled = true

[node name="BattleMode" type="Node"]

[node name="CombatQueue" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="PlayerTurnProxy" type="Node2D" parent="CombatQueue"]
script = ExtResource( 10 )

[node name="BattleMode" type="Node2D" parent="."]

[node name="ScrollBG" parent="BattleMode" instance=ExtResource( 5 )]
offset = Vector2( 128, 128 )
transform = Transform2D( 1, 0, 0, 1, 128, 128 )

[node name="BattleZone" type="Sprite" parent="BattleMode"]
position = Vector2( 200, 150 )
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="BattleMode/BattleZone"]
scale = Vector2( 0.363636, 0.533333 )
current = true

[node name="StaticBody2D" type="StaticBody2D" parent="BattleMode/BattleZone"]
position = Vector2( 0, 82 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BattleMode/BattleZone/StaticBody2D"]
shape = SubResource( 1 )

[node name="StaticBody2D2" type="StaticBody2D" parent="BattleMode/BattleZone"]
position = Vector2( 8.00003, -78 )
rotation = 3.14159

[node name="CollisionShape2D" type="CollisionShape2D" parent="BattleMode/BattleZone/StaticBody2D2"]
shape = SubResource( 1 )

[node name="StaticBody2D3" type="StaticBody2D" parent="BattleMode/BattleZone"]
position = Vector2( -128, -6 )
rotation = 1.57079

[node name="CollisionShape2D" type="CollisionShape2D" parent="BattleMode/BattleZone/StaticBody2D3"]
shape = SubResource( 1 )

[node name="StaticBody2D4" type="StaticBody2D" parent="BattleMode/BattleZone"]
position = Vector2( 128, 2 )
rotation = -1.57079

[node name="CollisionShape2D" type="CollisionShape2D" parent="BattleMode/BattleZone/StaticBody2D4"]
shape = SubResource( 1 )

[node name="PlayerSoul" parent="BattleMode" instance=ExtResource( 2 )]

[node name="PlayerUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
combat_queue = NodePath("../CombatQueue")

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerUI"]
anchor_top = 0.773
anchor_right = 1.0
anchor_bottom = 0.947
margin_top = 16.1
margin_bottom = 15.9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnAttack" type="Button" parent="PlayerUI/HBoxContainer"]
margin_right = 130.0
margin_bottom = 52.0
focus_neighbour_left = NodePath("../BtnSpare")
focus_neighbour_right = NodePath("../BtnAction")
size_flags_horizontal = 3
text = "Attack"

[node name="DefaultFocusItem" parent="PlayerUI/HBoxContainer/BtnAttack" instance=ExtResource( 4 )]

[node name="BtnAction" type="Button" parent="PlayerUI/HBoxContainer"]
margin_left = 134.0
margin_right = 265.0
margin_bottom = 52.0
focus_neighbour_left = NodePath("../BtnAttack")
focus_neighbour_right = NodePath("../BtnSpare")
size_flags_horizontal = 3
text = "Action"

[node name="BtnSpare" type="Button" parent="PlayerUI/HBoxContainer"]
margin_left = 269.0
margin_right = 400.0
margin_bottom = 52.0
focus_neighbour_left = NodePath("../BtnAction")
focus_neighbour_right = NodePath("../BtnAttack")
size_flags_horizontal = 3
text = "Spare"

[node name="ActionOptions" type="CenterContainer" parent="PlayerUI"]
margin_left = 72.0
margin_top = 72.0
margin_right = 328.0
margin_bottom = 232.0

[node name="OptionButton" type="OptionButton" parent="PlayerUI/ActionOptions"]
margin_left = 53.0
margin_top = 55.0
margin_right = 203.0
margin_bottom = 105.0
rect_min_size = Vector2( 150, 50 )
text = "Actions"
align = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Player Health" type="Control" parent="."]
margin_left = 352.0
margin_top = 104.0
margin_right = 392.0
margin_bottom = 144.0
theme = ExtResource( 6 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Player Health"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Player Health/VBoxContainer"]
margin_right = 40.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.937255, 0.980392, 0.980392, 1 )
text = "10 HP"

[node name="TextureProgress" type="TextureProgress" parent="Player Health/VBoxContainer"]
margin_top = 16.0
margin_right = 40.0
margin_bottom = 80.0
max_value = 10.0
value = 8.0
texture_under = ExtResource( 7 )
texture_over = ExtResource( 12 )
texture_progress = ExtResource( 11 )
fill_mode = 3

[connection signal="pressed" from="PlayerUI/HBoxContainer/BtnAttack" to="PlayerUI" method="_on_BtnAttack_pressed"]
[connection signal="pressed" from="PlayerUI/HBoxContainer/BtnAction" to="PlayerUI" method="_on_BtnAction_pressed"]
[connection signal="pressed" from="PlayerUI/HBoxContainer/BtnSpare" to="PlayerUI" method="_on_BtnSpare_pressed"]
